--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -4,16 +4,17 @@ body{
 }
 
 .box{
+    justify-content: center;
     text-align: center;
     align-items: center;
     top: 50%;
     left: 50%;
-    transform: translate(50%,50%);
+    transform: translate(-50%,-50%);
+    position: absolute;
     background-color: #53a066;
-    max-width : 500px;
+    min-width : 500px;
     min-height: 300px;
     border-radius: 30px;
-    padding: 50px;
 }
 
 h1{
